# sctools

./: README.md  metrics.py  pyproject.toml  requirements.txt  setup.py
sctools/: __init__.py
sctools.egg-info/: PKG-INFO  SOURCES.txt
sctools/metrics/: __init__.py
sctools/tools/: __init__.py  calculate_pca.py  load_markers.py  pseudobulk_matrix.py
sctools/tools/src/: gene_markers.csv
sctools/visualization/: __init__.py  colorize_labels.py
