[project]
name = "sctools"
version = "0.0.1"
authors = [
  { name="Kevin", email="" },
]
description = "Utilities for single-cell analyses."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = "https://github.com/ktroule/sctools"
