[project]
name = "sctools"
version = "0.0.0"
authors = [
  { name="Kevin", email="nomail@nomail.com" },
]
description = "Utilities for single-cell analyses."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ktroule/sctools"
